Removed wrong line of code

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "devDependencies": {
         "typescript": "2.2.0",
         "concurrently": "^3.2.0",
-        "lite-server": "^2.2.2",
-        "npm install lite-server": "2.3.0"
+        "lite-server": "^2.2.2"
     }
 }
