--- a/package.json
+++ b/package.json
@@ -2,27 +2,34 @@
     "name": "angular-kickstart",
     "version": "1.0.0",
     "scripts": {
-        "dev": "lite-server"
+        "start": "lite-server && npm run build_prod:watch",
+        "tsc": "tsc",
+        "tsc:w": "tsc -w",
+        "build_prod:watch": "npm run build_prod -w",
+        "build_prod": "browserify -s main app/main.js > app/bundle.js && npm run minify",
+        "minify": "uglifyjs app/bundle.js --screw-ie8 --compress --mangle --output app/bundle.min.js"
     },
     "dependencies": {
-        "@angular/common": "~4.1.0",
-        "@angular/compiler": "~4.1.0",
-        "@angular/core": "~4.1.0",
-        "@angular/forms": "~4.1.0",
-        "@angular/http": "~4.1.0",
-        "@angular/platform-browser": "~4.1.0",
-        "@angular/platform-browser-dynamic": "~4.1.0",
-        "@angular/router": "~4.1.0",
-
-        "angular-in-memory-web-api": "~0.3.0",
-        "systemjs": "0.19.40",
+        "@angular/common": "6.0.0-beta.7",
+        "@angular/compiler": "6.0.0-beta.7",
+        "@angular/core": "6.0.0-beta.7",
+        "@angular/forms": "6.0.0-beta.7",
+        "@angular/http": "6.0.0-beta.7",
+        "@angular/platform-browser": "6.0.0-beta.7",
+        "@angular/platform-browser-dynamic": "6.0.0-beta.7",
+        "@angular/router": "6.0.0-beta.7",
+        "angular-in-memory-web-api": "^0.3.2",
+        "browserify": "^16.1.1",
         "core-js": "^2.4.1",
-        "rxjs": "5.0.1",
+        "rjs": "^4.0.2",
+        "rxjs": "^5.5.7",
+        "systemjs": "^0.19.40",
+        "uglifyjs": "^2.4.11",
         "zone.js": "^0.8.4"
     },
     "devDependencies": {
-        "typescript": "2.2.0",
         "concurrently": "^3.2.0",
-        "lite-server": "^2.2.2"
+        "lite-server": "^2.2.2",
+        "typescript": "^2.2.0"
     }
 }
