--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "rjs": "^4.0.2",
         "rxjs": "^5.5.7",
         "systemjs": "^0.19.40",
+        "uglify-js": "^3.3.16",
         "uglifyjs": "^2.4.11",
         "zone.js": "^0.8.4"
     },
